Corrected the order of the site settings. Clément, please check if this is corrected

--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -16,7 +16,7 @@
   <div class="l-site-creation -settings">
     <div class="wrapper">
 
-      <%= f.fields_for :site_settings, f.object.site_settings do |settings_form| %>
+      <%= f.fields_for :site_settings, f.object.site_settings.order(:position) do |settings_form| %>
         <% setting = settings_form.object %>
         <% case setting.name
            when 'logo_image' %>
