Fixes the description of the page creation's steps

--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -3,7 +3,7 @@
     <div class="wrapper">
       <div class="description">
         <h1>Page title</h1>
-        <p>Choose a title for your page and write a small description for yourself and for the search engines</p>
+        <p>Choose a title, write a small description for yourself and for the search engines and type the URI</p>
       </div>
     </div>
   </div>
