--- a/app/views/management/page_steps/open_content.html.erb
+++ b/app/views/management/page_steps/open_content.html.erb
@@ -1,9 +1,9 @@
 <% content_for :extended_header do %>
-  <div class="c-extended-header -high">
+  <div class="c-extended-header">
     <div class="wrapper">
       <div class="description">
         <h1>Open Content</h1>
-        <p>Fill in the page's title, description and URI and start writing its content.</p>
+        <p>Write the content of your page.</p>
       </div>
       <div></div>
     </div>
