--- a/app/assets/stylesheets/components/management/c-wysiwyg.scss
+++ b/app/assets/stylesheets/components/management/c-wysiwyg.scss
@@ -241,7 +241,7 @@ $wysiwyg-lateral-padding: 105px;
       line-height: 1.5;
 
       & + p {
-        margin-top: 20px;
+        margin-top: .9em;
       }
     }
 
@@ -260,6 +260,16 @@ $wysiwyg-lateral-padding: 105px;
 
       &::after {
         content: '”';
+      }
+    }
+
+    ul,
+    ol {
+      display: block;
+      margin: .5em 0;
+
+      li {
+        display: list-item;
       }
     }
 
@@ -337,87 +347,4 @@ $wysiwyg-lateral-padding: 105px;
       }
     }
   }
-
-
-  // p {
-  //   margin: 0;
-  //   font-size: $font-size-s-normal;
-
-  //   &.-intro {
-  //     font-size: $font-size-x-normal;
-  //     font-weight: $font-weight-light;
-
-  //     &.-empty {
-  //       position: relative;
-  //       min-height: $font-size-x-normal;
-
-  //       &::after {
-  //         display: inline-block;
-  //         position: absolute;
-  //         top: 0;
-  //         left: 0;
-  //         color: rgba($color-4, .3);
-  //         content: 'Introduction';
-  //       }
-  //     }
-  //   }
-  // }
-
-  // .quote {
-  //   font-size: $font-size-x-normal;
-  //   font-style: italic;
-
-  //   &::before {
-  //     content: '“';
-  //   }
-
-  //   &::after {
-  //     content: '”';
-  //   }
-
-  //   &.-empty {
-  //     position: relative;
-  //     min-height: $font-size-x-normal;
-
-  //     &::before {
-  //       position: absolute;
-  //       top: 0;
-  //       left: 0;
-  //       color: rgba($color-4, .3);
-  //       content: '“Citation”';
-  //     }
-
-  //     &::after {
-  //       content: none;
-  //     }
-  //   }
-  // }
-
-  // .st-block {
-  //   &[data-type='title'] {
-  //     margin: 40px 0 15px;
-  //   }
-
-  //   &[data-type='introduction'] {
-  //     margin: 15px 0;
-  //   }
-
-  //   &[data-type='quote'] {
-  //     margin: 15px 0;
-
-  //     > .st-block__inner {
-  //       margin: 0 110px;
-  //     }
-  //   }
-
-  //   &[data-type='text'] {
-  //     margin: 10px 0;
-  //   }
-  // }
-
-  // .st-block-replacer {
-  //   // Do not remove unless you make sure the "+" button doesn't overlap the action bar
-  //   z-index: 0;
-  // }
-
 }
