--- a/app/views/management/_header.html.erb
+++ b/app/views/management/_header.html.erb
@@ -17,7 +17,7 @@
       <% end %>
     </div>
     <ul class="menu">
-      <li><%= link_to 'Logout', auth_logout_url, {:method => :post} %></li>
+      <li><%= link_to current_user.name, edit_management_profile_path(current_user.id) %></li>
     </ul>
   </div>
 </div>
