Added validations to user profiling

--- a/app/views/management/profile/edit.html.erb
+++ b/app/views/management/profile/edit.html.erb
@@ -30,4 +30,4 @@
   </div>
   <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: management_path, no_continue: true} %>
 <% end %>
-<%= render partial: 'shared/errors', locals: { resource: @dataset } %>
+<%= render partial: 'shared/errors', locals: { resource: @user } %>
