--- a/app/assets/stylesheets/components/management/c-wysiwyg.scss
+++ b/app/assets/stylesheets/components/management/c-wysiwyg.scss
@@ -1,13 +1,16 @@
+$wysiwyg-width: 880px;
+$wysiwyg-lateral-padding: 105px;
+
 .c-wysiwyg {
   position: relative;
-  max-width: 880px;
+  max-width: $wysiwyg-width;
   min-height: calc(100vh - 533px);
   margin: 0 auto;
   border: 1px solid $color-13;
 
   .ql-editor {
     min-height: 100%;
-    padding: 30px 105px;
+    padding: 30px $wysiwyg-lateral-padding;
     overflow: visible;
   }
 
@@ -270,6 +273,22 @@
         max-width: 100%;
         margin: 0 auto;
         border-radius: 4px;
+      }
+
+      > .caption {
+        display: block;
+        width: 100%;
+        max-width: #{$wysiwyg-width - 2 * $wysiwyg-lateral-padding};
+        margin: 12px auto 0;
+        font-style: italic;
+        text-align: right;
+
+        &:empty {
+          &::before {
+            color: rgba($color-4, .5);
+            content: 'Edit me to add a caption to the image';
+          }
+        }
       }
     }
 
