--- a/app/assets/stylesheets/components/shared/c-content.scss
+++ b/app/assets/stylesheets/components/shared/c-content.scss
@@ -153,8 +153,6 @@
   .-widget {
     max-width: 100%;
     margin: 50px 0;
-    padding: 20px 20px 10px;
-    border: 1px solid $color-13;
 
     @media #{$mq-mobile} {
       margin: 50px auto;
@@ -162,11 +160,43 @@
 
     @media #{$mq-laptop} {
       max-width: $media-max-width;
-      padding: 60px 60px 40px;
     }
 
-    .error {
-      text-align: center;
+    .widget-container {
+      padding: 20px 20px 10px;
+      border: 1px solid $color-13;
+
+      @media #{$mq-laptop} {
+        padding: 60px 60px 40px;
+      }
+
+      .error {
+        text-align: center;
+      }
+    }
+
+    .caption {
+      display: block;
+      width: 100%;
+      max-width: 100%;
+      margin-top: 12px;
+      font-size: $font-size-s-normal;
+      font-style: italic;
+      font-weight: $font-weight-light;
+      text-align: right;
+
+      @if $theme == 1 {
+        font-family: $font-family-2;
+      }
+
+      @media #{$mq-mobile} {
+        margin: 0 auto;
+        margin-top: 12px;
+      }
+
+      @media #{$mq-laptop} {
+        max-width: $media-max-width;
+      }
     }
   }
 }
