Created task for changing the current site settings. Changed the mvc of site settings according to the new specification

--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -34,12 +34,50 @@
               <%= settings_form.file_field :image, id: 'logo', accept: 'image/*' %>
             </div>
           </div>
-        <% when 'logo_background' %>
-          <%= settings_form.hidden_field :name, value: 'logo_background'%>
+        <% when 'main_image' %>
           <%= settings_form.hidden_field :position, value: '3'%>
+          <%= settings_form.hidden_field :name, value: 'main_image'%>
+          <% if !@main_image.nil? && @main_image.image_file_name %>
+            <div class="c-centered-input">
+              <label>Main image preview</label>
+              <%= image_tag @main_image.image.url %>
+            </div>
+          <% end %>
           <div class="c-centered-input">
-            <%= settings_form.label :name, value: 'Logo background' %>
-            <%= settings_form.color_field :value %>
+            <%= settings_form.label :image, value: 'Main image', for: 'main' %>
+            <div class="js-file-input">
+              <%= settings_form.file_field :image, id: 'main', accept: 'image/*' %>
+            </div>
+          </div>
+        <% when 'alternative_image' %>
+          <%= settings_form.hidden_field :position, value: '4'%>
+          <%= settings_form.hidden_field :name, value: 'alternative_image'%>
+          <% if !@alternative_image.nil? && @alternative_image.image_file_name %>
+            <div class="c-centered-input">
+              <label>Alternative image preview</label>
+              <%= image_tag @alternative_image.image.url %>
+            </div>
+          <% end %>
+          <div class="c-centered-input">
+            <%= settings_form.label :image, value: 'Alternative image', for: 'alternative' %>
+            <div class="js-file-input">
+              <%= settings_form.file_field :image, id: 'alternative', accept: 'image/*' %>
+            </div>
+          </div>
+        <% when 'Favico' %>
+          <%= settings_form.hidden_field :position, value: '5'%>
+          <%= settings_form.hidden_field :name, value: 'favico'%>
+          <% if !@favico.nil? && @favico.image_file_name %>
+            <div class="c-centered-input">
+              <label>Icon image preview</label>
+              <%= image_tag @favico.image.url %>
+            </div>
+          <% end %>
+          <div class="c-centered-input">
+            <%= settings_form.label :image, value: 'Icon image', for: 'favico' %>
+            <div class="js-file-input">
+              <%= settings_form.file_field :image, id: 'favico', accept: 'image/*' %>
+            </div>
           </div>
         <% when 'flag' %>
           <hr />
