--- a/app/assets/stylesheets/components/shared/c-dropdown-selector.scss
+++ b/app/assets/stylesheets/components/shared/c-dropdown-selector.scss
@@ -4,25 +4,6 @@
 
   > .active-option {
     cursor: pointer;
-
-    &::after {
-      display: inline-block;
-      width: 8px;
-      height: 8px;
-      margin-left: 12px;
-      transform: translateY(-3px) rotate(135deg);
-      border-bottom: 0;
-      border-left: 0;
-      content: '';
-
-      @if $theme == 1 {
-        border-top: 2px solid $color-1;
-        border-right: 2px solid $color-1;
-      } @else {
-        border-top: 2px solid $color-3;
-        border-right: 2px solid $color-3;
-      }
-    }
   }
 
   > .options {
@@ -130,6 +111,29 @@
     }
   }
 
+  &.-arrow-right {
+    > .active-option {
+      &::after {
+        display: inline-block;
+        width: 8px;
+        height: 8px;
+        margin-left: 12px;
+        transform: translateY(-3px) rotate(135deg);
+        border-bottom: 0;
+        border-left: 0;
+        content: '';
+
+        @if $theme == 1 {
+          border-top: 2px solid $color-1;
+          border-right: 2px solid $color-1;
+        } @else {
+          border-top: 2px solid $color-3;
+          border-right: 2px solid $color-3;
+        }
+      }
+    }
+  }
+
   &.-arrow-left {
     > .active-option {
       &::before {
@@ -149,10 +153,6 @@
           border-top: 2px solid $color-3;
           border-right: 2px solid $color-3;
         }
-      }
-
-      &::after {
-        content: none;
       }
     }
   }
