--- a/app/views/management/_header.html.erb
+++ b/app/views/management/_header.html.erb
@@ -16,8 +16,6 @@
           </ul>
       <% end %>
     </div>
-    <ul class="menu">
-      <li><%= link_to current_user.name, edit_management_profile_path(current_user.id) %></li>
-    </ul>
+    <div class="user-links js-user-links"></div>
   </div>
 </div>
