--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -48,25 +48,21 @@
     }
 
     > .logo-container {
+      max-width: calc(100% - 63px);
       margin-right: 35px;
       text-transform: uppercase;
       z-index: 1; // Make the logo on top of the flag border
 
       .logo {
-        display: block;
-        width: 80px;
+        display: inline-block;
+        width: 100%;
         height: 80px;
-        border: 1px solid;
-        border-top: 0;
-        background-color: $color-3;
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: contain;
+        padding: 0;
 
-        @if $theme == 2 {
-          border-color: rgba($color-4, .2);
-        } @else {
-          border-color: rgba($color-1, .3);
+        img {
+          display: block;
+          max-width: 100%;
+          max-height: 100%;
         }
       }
     }
@@ -205,21 +201,15 @@
       pointer-events: none; // Its overflow the breadcrumbs
 
       .logo {
-        display: block;
-        width: 80px;
+        display: inline-block;
         height: 80px;
-        border: 1px solid;
-        border-top: 0;
-        background-color: $color-3;
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: contain;
+        padding: 0;
         pointer-events: all; // We want the logo to receive the events
 
-        @if $theme == 2 {
-          border-color: rgba($color-4, .2);
-        } @else {
-          border-color: rgba($color-1, .3);
+        img {
+          display: block;
+          max-width: 100%;
+          max-height: 100%;
         }
       }
     }
