--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -37,7 +37,9 @@
 
   <div class="mobile-menu wrapper">
     <div class="logo-container" href="/">
-      <a class="logo" href="/" style="background-image: url(<%= (@image_url && @image_url != '/')? asset_url(@image_url) : asset_url('logo')%>);"></a>
+      <a class="logo" href="/">
+        <%= image_tag((@image_url && @image_url != '/') ? @image_url : asset_path('logo.png')) %>
+      </a>
     </div>
     <div class="hamburger-menu js-mobile-menu">
       <div></div>
@@ -48,7 +50,9 @@
 
   <div class="desktop-menu wrapper">
     <div class="logo-container">
-      <a class="logo" href="/" style="background-image: url(<%= (@image_url && @image_url != '/')? @image_url : asset_path('logo.png')%>);"></a>
+      <a class="logo" href="/">
+        <%= image_tag((@image_url && @image_url != '/') ? @image_url : asset_path('logo.png')) %>
+      </a>
     </div>
     <ul>
       <% @menu_root.children.each do |child_page| -%>
