--- a/app/views/context_steps/writers.html.erb
+++ b/app/views/context_steps/writers.html.erb
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="description">
       <h1>Writers</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+      <p>Select the persons that will be able to upload datasets to the context and create widgets with them</p>
     </div>
   </div>
 </div>
@@ -30,4 +30,3 @@
   <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: contexts_path} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @context } %>
-<%= console if Rails.env.development? %>
