--- a/app/views/context_steps/datasets.html.erb
+++ b/app/views/context_steps/datasets.html.erb
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="description">
       <h1>Datasets</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+      <p>(Optional) Choose datasets to add to the context</p>
     </div>
   </div>
 </div>
@@ -32,4 +32,3 @@
     locals: { f: f, cancel: contexts_path, always_save: true, no_continue: true } %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @context } %>
-<%= console if Rails.env.development? %>
