--- a/app/views/context_steps/title.html.erb
+++ b/app/views/context_steps/title.html.erb
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="description">
       <h1>Context title</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+      <p>Choose a name for the context</p>
     </div>
   </div>
 </div>
