--- a/app/assets/stylesheets/components/management/c-wysiwyg.scss
+++ b/app/assets/stylesheets/components/management/c-wysiwyg.scss
@@ -229,11 +229,19 @@ $wysiwyg-lateral-padding: 105px;
     }
 
     h1 {
-      margin-bottom: 25px;
+      margin: 40px auto 10px;
       color: $color-4;
       font-size: $font-size-huge;
       font-weight: $font-weight-light;
       letter-spacing: .3px;
+    }
+
+    h2 {
+      margin: 20px auto 5px;
+      color: $color-4;
+      font-size: $font-size-medium;
+      font-weight: $font-weight-bold;
+      letter-spacing: .2px;
     }
 
     p {
