--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -4,9 +4,8 @@
   align-items: center;
   justify-content: center;
   padding: 50px 0 30px;
-  // image sample. This property should be injected through javascript
-  background-image: asset-url('cover.jpg');
   background-repeat: no-repeat;
+  background-position: center center;
   background-size: cover;
 
   @media #{$mq-mobile} {
