--- a/app/views/site_page/not_found.html.erb
+++ b/app/views/site_page/not_found.html.erb
@@ -1,4 +1,4 @@
-<div class="c-cover -short">
+<div class="c-cover -short" style="background-image: url('<%= @alternative_image %>');">
   <div class="wrapper">
     <h2 class="cover-title">Error 404</h2>
   </div>
