--- a/app/views/site_page/open_content.html.erb
+++ b/app/views/site_page/open_content.html.erb
@@ -1,4 +1,4 @@
-<%= render 'front/cover'%>
+<%= render 'front/cover', image: @alternative_image, size: 'small' %>
 
 <div class="c-content">
   <div class="wrapper">
