--- a/app/views/management/page_steps/dataset.html.erb
+++ b/app/views/management/page_steps/dataset.html.erb
@@ -20,27 +20,29 @@
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
   <div class="l-page-creation -dataset">
     <div class="wrapper">
-        <% @context_datasets.each do |context_id, datasets| %>
-          <%# TODO: Remove the DB query from the view %>
-          <h3 class="context">
-            <%= ::Context.find(context_id).name %></h3>
-          <div class="c-cards-list">
-            <% datasets.each do |dataset| %>
-              <div class="card">
-                <label for="dataset-<%= context_id %>-<%= dataset.id %>"><%= dataset.name %></label>
-                <%= radio_button_tag 'site_page[dataset_setting][context_id_dataset_id]', \
-                  [context_id.to_s, dataset.id], f.object.dataset_setting ? (f.object.dataset_setting.dataset_id == dataset.id) : nil, id: 'dataset-' + context_id.to_s + '-' + dataset.id %>
-                <div class="content">
-                  <h3><%= dataset.name %></h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                </div>
-              </div>
-            <% end %>
+      <div class="c-action-toolbar">
+        <ul class="buttons">
+        </ul>
+        <ul class="filters">
+          <li><div class="c-input-search js-dataset-search"></div></li>
+        </ul>
+      </div>
+      <div class="c-cards-list">
+        <% @datasets_contexts.each do |id, dc|%>
+          <div class="card js-dataset" data-id="<%= id %>" data-name="<%= dc[:dataset].name %>" data-contexts="<%= dc[:contexts].join(',') %>">
+            <label for="dataset-<%= id %>"><%= dc[:dataset].name %></label>
+            <%= radio_button_tag 'site_page[dataset_setting][dataset_id]', \
+                    id, f.object.dataset_setting ? (f.object.dataset_setting.dataset_id == id) : nil, id: 'dataset-' + id %>
+            <div class="content">
+              <h3><%= dc[:dataset].name %></h3>
+              <p>Contexts: <%= dc[:contexts].join(', ') %></p>
+            </div>
           </div>
         <% end %>
       </div>
     </div>
-    <%= render partial: 'management/steps_shared/footer', locals: {f: f, never_save: true} %>
+  </div>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f, never_save: true} %>
 <% end %>
 
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
