Improves the number of row's "precision"
Basically, after the loader would disappear, the number could be updated twice without the loader between the updates. Now, the loader will always be present when a request is pending.

--- a/app/assets/javascripts/templates/management/dataset-filters.hbs
+++ b/app/assets/javascripts/templates/management/dataset-filters.hbs
@@ -105,7 +105,7 @@
   <div class="action-bar">
       <button type="button" class="c-button -outline -dark-text {{#if canAddNewField}}js-add-filter{{else}}-disabled{{/if}}">Add filter</button>
       <div>
-        <div class="js-row-count"></div>
+        <div class="c-loading-spinner js-row-count"></div>
         <button type="button" class="c-button -outline -dark-text js-preview">Preview table</button>
       </div>
   </div>
