Limits the number of rows in the table & adds a selector to change it

--- a/app/assets/stylesheets/components/shared/c-table.scss
+++ b/app/assets/stylesheets/components/shared/c-table.scss
@@ -1,7 +1,10 @@
-.c-table,
-.c-table table{
+.c-table {
   width: 100%;
-  border-spacing: 0;
+
+  > table {
+    width: 100%;
+    border-spacing: 0;
+  }
 
   caption {
     display: none;
