Adds the pagination system

--- a/app/assets/javascripts/templates/shared/table.hbs
+++ b/app/assets/javascripts/templates/shared/table.hbs
@@ -77,4 +77,9 @@
       {{/each}}
     </select>
   </div>
+  <div class="paginator">
+    <button type="button" class="js-prev-page">Previous page</button>
+    {{firstResultIndex}}-{{lastResultIndex}} of {{totalResults}}
+    <button type="button" class="js-next-page">Next page</button>
+  </div>
 </div>
