--- a/app/assets/stylesheets/components/shared/c-select.scss
+++ b/app/assets/stylesheets/components/shared/c-select.scss
@@ -49,4 +49,21 @@
       background-color: rgba($color-1, .1);
     }
   }
+
+  &.-mini {
+    &::before {
+      right: 2px;
+    }
+
+    &::after {
+      right: 14px;
+    }
+
+    > select {
+      height: 24px;
+      padding: 0 24px 0 8px;
+      background-color: lighten($color-1, 45%);
+      font-size: $font-size-small;
+    }
+  }
 }
